refs# 2150 jambeth-core: URL error